--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -139,11 +139,8 @@
           <p>O verdadeiro sabor feito na brasa 🔥</p>
       
           <div class="footer-contacts">
-            <a href="tel:+5531999999999">
-              📞 (31) 99999-9999
-            </a>
-            <a href="mailto:contato@ckburger.com">
-              ✉️ contato@ckburger.com
+            <a href="tel:+5531984833222">
+              📞 (31) ligar . . .
             </a>
             <a href="https://wa.me/5531999999999" target="_blank">
               💬 WhatsApp
