atualizaçao design carrinho, correção de funcoes, armazenamento em local storage do carrinho

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -53,7 +53,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide product-item" data-id="oferta-1" data-name="Combo Mega Cheddar" data-price="39.90">
                         <img src="img/combo1.webp" alt="Combo Mega Cheddar" loading="lazy">>
-                        <h3>Combo Mega <br>Cheddar</h3>
+                        <h3>Combo Mega Cheddar</h3>
                         <p> Mega Cheddar + Batata Média + Coca-Cola Lata.</p>
                         <span class="price">R$ 39,90</span>
                         <button class="add-to-cart btn btn-secondary">Adicionar</button>
@@ -158,7 +158,7 @@
             <a href="https://wa.me/5531984833222" target="_blank">
               💬 WhatsApp
             </a>
-            <a href="https://instagram.com/ckburger" target="_blank">
+            <a href="https://instagram.com/ckburgergrill" target="_blank">
               📷 Instagram
             </a>
           </div>
@@ -215,6 +215,7 @@
       btnTopo.style.display = "none";
     }
   });
+  
 
   // Ação ao clicar: rolar suavemente para o topo
   btnTopo.addEventListener("click", () => {
