ajuste css mediaquery, atualização de fotos.

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -17,14 +17,15 @@
     <header class="main-header">
         <div class="container header-content">
             <a href="INDEX.HTML">
-                <img src="img/BURGER.webp" alt="CK Burger Logo" class="logo">
+                <img src="img/logos/BURGER.webp" alt="CK Burger Logo" class="logo">
             </a>    
             <nav class="main-nav">
+
                 <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#menu-section">Cardápio</a></li>
-                    <li><a href="#offers">Promoções</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li class="nav-hide-mobile"><a href="#">Início</a></li>
+                    <li class="nav-show-mobile"><a href="#menu-section">Cardápio</a></li>
+                    <li class="nav-show-mobile"><a href="#offers">Promoções</a></li>
+                    <li class="nav-hide-mobile"><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
             <button id="open-cart-button" class="cart-button">
@@ -184,7 +185,7 @@
     <footer class="footer" id="contato">
         <div class="footer-container">
           <div class="footer-logo">
-            <img src="img/BURGER.webp" alt="CK Burger Belo Horizonte Hamburger artesanal feito na brasa">
+            <img src="img/logos/BURGER.webp" alt="CK Burger Belo Horizonte Hamburger artesanal feito na brasa">
           </div>
           <p>O verdadeiro sabor feito na brasa 🔥</p>
       
