--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CK Burger - Peça Online!</title>
-    <link rel="icon" type="image/png" href="img/BURGER.png">
+    <link rel="icon" type="image/png" href="img/logos/BURGER.webp">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
